// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`relations resolvers generation should not emit relation resolver when relation field is ignored: UserRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Point } from \\"../../../models/Point\\";
import { User } from \\"../../../models/User\\";
import { UserPointsArgs } from \\"./args/UserPointsArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => User)
export class UserRelationsResolver {
  @ResolveField((_type: any) => [Point], {
    nullable: false
  })
  async points(@Parent() user: User, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: UserPointsArgs): Promise<Point[]> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'User', '', '');
    return getPrismaFromContext(ctx).user.findUniqueOrThrow({
      where: {
        id: user.id,
      },
    }).points({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'User', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should not emit relation resolver when relation field is ignored: argsIndex 1`] = `
"export * from \\"./User/args\\";
"
`;

exports[`relations resolvers generation should not emit relation resolver when relation field is ignored: index 1`] = `
"export * from \\"./resolvers.index\\";
export * from \\"./args.index\\";
"
`;

exports[`relations resolvers generation should not emit relation resolver when relation field is ignored: mainIndex 1`] = `
"import * as crudResolversImport from \\"./resolvers/crud/resolvers-crud.index\\";
import * as relationResolversImport from \\"./resolvers/relations/resolvers.index\\";

export * from \\"./enums\\";
export * from \\"./models\\";
export * from \\"./resolvers/crud\\";

export const crudResolvers = Object.values(crudResolversImport) as Function[];

export * from \\"./resolvers/relations\\";

export const relationResolvers = Object.values(relationResolversImport) as Function[];

export * from \\"./resolvers/inputs\\";
export * from \\"./resolvers/outputs\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";

export const resolvers = [
  ...crudResolvers,
  ...relationResolvers,
] as Function[];
"
`;

exports[`relations resolvers generation should not emit relation resolver when relation field is ignored: resolversIndex 1`] = `
"export { PointRelationsResolver } from \\"./Point/PointRelationsResolver\\";
export { UserRelationsResolver } from \\"./User/UserRelationsResolver\\";
"
`;

exports[`relations resolvers generation should properly generate args classes for sorting by relation fields: FirstModelSecondModelsFieldArgs 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { SecondModelOrderByWithRelationInput, SecondModelWhereInput, SecondModelWhereUniqueInput } from \\"../../../inputs\\";
import { SecondModelScalarFieldEnum } from \\"../../../../enums/SecondModelScalarFieldEnum\\";

@ArgsType()
export class FirstModelSecondModelsFieldArgs {
  @Field((_type: any) => SecondModelWhereInput, {
    nullable: true
  })
  where?: SecondModelWhereInput | undefined;

  @Field((_type: any) => [SecondModelOrderByWithRelationInput], {
    nullable: true
  })
  orderBy?: SecondModelOrderByWithRelationInput[] | undefined;

  @Field((_type: any) => SecondModelWhereUniqueInput, {
    nullable: true
  })
  cursor?: SecondModelWhereUniqueInput | undefined;

  @Field((_type: any) => Int, {
    nullable: true
  })
  take?: number | undefined;

  @Field((_type: any) => Int, {
    nullable: true
  })
  skip?: number | undefined;

  @Field((_type: any) => [SecondModelScalarFieldEnum], {
    nullable: true
  })
  distinct?: Array<\\"idField\\" | \\"uniqueStringField\\" | \\"floatField\\" | \\"firstModelFieldId\\"> | undefined;
}
"
`;

exports[`relations resolvers generation should properly generate args classes for sorting by relation fields: index 1`] = `
"export { FirstModelSecondModelsFieldArgs } from \\"./FirstModelSecondModelsFieldArgs\\";
"
`;

exports[`relations resolvers generation should properly generate composite keys where phrase in resolver: UsersOnProjectsRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Project } from \\"../../../models/Project\\";
import { User } from \\"../../../models/User\\";
import { UsersOnProjects } from \\"../../../models/UsersOnProjects\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => UsersOnProjects)
export class UsersOnProjectsRelationsResolver {
  @ResolveField((_type: any) => Project, {
    nullable: false
  })
  async project(@Parent() usersOnProjects: UsersOnProjects, @Context() ctx: any, @Info() info: GraphQLResolveInfo): Promise<Project> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'UsersOnProjects', '', '');
    return getPrismaFromContext(ctx).usersOnProjects.findUniqueOrThrow({
      where: {
        userId_projectId: {
          userId: usersOnProjects.userId,
          projectId: usersOnProjects.projectId,
        },
      },
    }).project({
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'UsersOnProjects', '', '')),
    });
  }

  @ResolveField((_type: any) => User, {
    nullable: false
  })
  async user(@Parent() usersOnProjects: UsersOnProjects, @Context() ctx: any, @Info() info: GraphQLResolveInfo): Promise<User> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'UsersOnProjects', '', '');
    return getPrismaFromContext(ctx).usersOnProjects.findUniqueOrThrow({
      where: {
        userId_projectId: {
          userId: usersOnProjects.userId,
          projectId: usersOnProjects.projectId,
        },
      },
    }).user({
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'UsersOnProjects', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate index files for 1-1 relation resolvers: index 1`] = `
"export * from \\"./resolvers.index\\";
export * from \\"./args.index\\";
"
`;

exports[`relations resolvers generation should properly generate index files for 1-1 relation resolvers: mainIndex 1`] = `
"import * as crudResolversImport from \\"./resolvers/crud/resolvers-crud.index\\";
import * as relationResolversImport from \\"./resolvers/relations/resolvers.index\\";

export * from \\"./enums\\";
export * from \\"./models\\";
export * from \\"./resolvers/crud\\";

export const crudResolvers = Object.values(crudResolversImport) as Function[];

export * from \\"./resolvers/relations\\";

export const relationResolvers = Object.values(relationResolversImport) as Function[];

export * from \\"./resolvers/inputs\\";
export * from \\"./resolvers/outputs\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";

export const resolvers = [
  ...crudResolvers,
  ...relationResolvers,
] as Function[];
"
`;

exports[`relations resolvers generation should properly generate index files for 1-1 relation resolvers: resolversIndex 1`] = `
"export { AdminUserRelationsResolver } from \\"./AdminUser/AdminUserRelationsResolver\\";
export { UserRelationsResolver } from \\"./User/UserRelationsResolver\\";
"
`;

exports[`relations resolvers generation should properly generate index files for 1-many relation resolvers: argsIndex 1`] = `
"export * from \\"./User/args\\";
"
`;

exports[`relations resolvers generation should properly generate index files for 1-many relation resolvers: index 1`] = `
"export * from \\"./resolvers.index\\";
export * from \\"./args.index\\";
"
`;

exports[`relations resolvers generation should properly generate index files for 1-many relation resolvers: mainIndex 1`] = `
"import * as crudResolversImport from \\"./resolvers/crud/resolvers-crud.index\\";
import * as relationResolversImport from \\"./resolvers/relations/resolvers.index\\";

export * from \\"./enums\\";
export * from \\"./models\\";
export * from \\"./resolvers/crud\\";

export const crudResolvers = Object.values(crudResolversImport) as Function[];

export * from \\"./resolvers/relations\\";

export const relationResolvers = Object.values(relationResolversImport) as Function[];

export * from \\"./resolvers/inputs\\";
export * from \\"./resolvers/outputs\\";
export * from \\"./enhance\\";
export * from \\"./scalars\\";

export const resolvers = [
  ...crudResolvers,
  ...relationResolvers,
] as Function[];
"
`;

exports[`relations resolvers generation should properly generate index files for 1-many relation resolvers: resolversIndex 1`] = `
"export { AddressRelationsResolver } from \\"./Address/AddressRelationsResolver\\";
export { UserRelationsResolver } from \\"./User/UserRelationsResolver\\";
"
`;

exports[`relations resolvers generation should properly generate relation resolver class for model with multi id keys with relation: MovieRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Director } from \\"../../../models/Director\\";
import { Movie } from \\"../../../models/Movie\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => Movie)
export class MovieRelationsResolver {
  @ResolveField((_type: any) => Director, {
    nullable: false
  })
  async director(@Parent() movie: Movie, @Context() ctx: any, @Info() info: GraphQLResolveInfo): Promise<Director> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'Movie', '', '');
    return getPrismaFromContext(ctx).movie.findUniqueOrThrow({
      where: {
        directorFirstName_directorLastName_title: {
          directorFirstName: movie.directorFirstName,
          directorLastName: movie.directorLastName,
          title: movie.title,
        },
      },
    }).director({
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'Movie', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolver class for model with named compound id with relation: MovieRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Director } from \\"../../../models/Director\\";
import { Movie } from \\"../../../models/Movie\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => Movie)
export class MovieRelationsResolver {
  @ResolveField((_type: any) => Director, {
    nullable: false
  })
  async director(@Parent() movie: Movie, @Context() ctx: any, @Info() info: GraphQLResolveInfo): Promise<Director> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'Movie', '', '');
    return getPrismaFromContext(ctx).movie.findUniqueOrThrow({
      where: {
        movieIdCompoundName: {
          directorFirstName: movie.directorFirstName,
          directorLastName: movie.directorLastName,
          title: movie.title,
        },
      },
    }).director({
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'Movie', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolver class for model with named compound unique with relation: MovieRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Director } from \\"../../../models/Director\\";
import { Movie } from \\"../../../models/Movie\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => Movie)
export class MovieRelationsResolver {
  @ResolveField((_type: any) => Director, {
    nullable: false
  })
  async director(@Parent() movie: Movie, @Context() ctx: any, @Info() info: GraphQLResolveInfo): Promise<Director> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'Movie', '', '');
    return getPrismaFromContext(ctx).movie.findUniqueOrThrow({
      where: {
        movieUniqueCompoundName: {
          directorFirstName: movie.directorFirstName,
          directorLastName: movie.directorLastName,
          title: movie.title,
        },
      },
    }).director({
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'Movie', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolver class for model with unique fields: DirectorRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Director } from \\"../../../models/Director\\";
import { Movie } from \\"../../../models/Movie\\";
import { DirectorMoviesArgs } from \\"./args/DirectorMoviesArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => Director)
export class DirectorRelationsResolver {
  @ResolveField((_type: any) => [Movie], {
    nullable: false
  })
  async movies(@Parent() director: Director, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: DirectorMoviesArgs): Promise<Movie[]> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'Director', '', '');
    return getPrismaFromContext(ctx).director.findUniqueOrThrow({
      where: {
        firstName_lastName: {
          firstName: director.firstName,
          lastName: director.lastName,
        },
      },
    }).movies({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'Director', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolvers classes for models with omitted relation field: PostRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { PostAuthorArgs } from \\"./args/PostAuthorArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => Post)
export class PostRelationsResolver {
  @ResolveField((_type: any) => User, {
    nullable: true
  })
  async author(@Parent() post: Post, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: PostAuthorArgs): Promise<User | null> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'Post', '', '');
    return getPrismaFromContext(ctx).post.findUniqueOrThrow({
      where: {
        uuid: post.uuid,
      },
    }).author({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'Post', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolvers classes for models with omitted relation field: UserRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { UserPostsArgs } from \\"./args/UserPostsArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => User)
export class UserRelationsResolver {
  @ResolveField((_type: any) => [Post], {
    nullable: false
  })
  async posts(@Parent() user: User, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: UserPostsArgs): Promise<Post[]> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'User', '', '');
    return getPrismaFromContext(ctx).user.findUniqueOrThrow({
      where: {
        id: user.id,
      },
    }).posts({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'User', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolvers classes for models with renamed relation fields: PostRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { PostAuthorArgs } from \\"./args/PostAuthorArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => Post)
export class PostRelationsResolver {
  @ResolveField((_type: any) => User, {
    nullable: true,
    description: \\"author field doc\\"
  })
  async postAuthor(@Parent() post: Post, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: PostAuthorArgs): Promise<User | null> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'Post', '', '');
    return getPrismaFromContext(ctx).post.findUniqueOrThrow({
      where: {
        uuid: post.uuid,
      },
    }).author({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'Post', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate relation resolvers classes for models with renamed relation fields: UserRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { UserPostsArgs } from \\"./args/UserPostsArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => User)
export class UserRelationsResolver {
  @ResolveField((_type: any) => [Post], {
    nullable: false
  })
  async userPosts(@Parent() user: User, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: UserPostsArgs): Promise<Post[]> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'User', '', '');
    return getPrismaFromContext(ctx).user.findUniqueOrThrow({
      where: {
        id: user.id,
      },
    }).posts({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'User', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate resolver and args class for array relation resolvers: UserPostsArgs 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { PostOrderByWithRelationInput, PostWhereInput, PostWhereUniqueInput } from \\"../../../inputs\\";
import { PostScalarFieldEnum } from \\"../../../../enums/PostScalarFieldEnum\\";

@ArgsType()
export class UserPostsArgs {
  @Field((_type: any) => PostWhereInput, {
    nullable: true
  })
  where?: PostWhereInput | undefined;

  @Field((_type: any) => [PostOrderByWithRelationInput], {
    nullable: true
  })
  orderBy?: PostOrderByWithRelationInput[] | undefined;

  @Field((_type: any) => PostWhereUniqueInput, {
    nullable: true
  })
  cursor?: PostWhereUniqueInput | undefined;

  @Field((_type: any) => Int, {
    nullable: true
  })
  take?: number | undefined;

  @Field((_type: any) => Int, {
    nullable: true
  })
  skip?: number | undefined;

  @Field((_type: any) => [PostScalarFieldEnum], {
    nullable: true
  })
  distinct?: Array<\\"uuid\\" | \\"content\\" | \\"authorId\\"> | undefined;
}
"
`;

exports[`relations resolvers generation should properly generate resolver and args class for array relation resolvers: UserRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { UserPostsArgs } from \\"./args/UserPostsArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => User)
export class UserRelationsResolver {
  @ResolveField((_type: any) => [Post], {
    nullable: false
  })
  async posts(@Parent() user: User, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: UserPostsArgs): Promise<Post[]> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'User', '', '');
    return getPrismaFromContext(ctx).user.findUniqueOrThrow({
      where: {
        id: user.id,
      },
    }).posts({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'User', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate resolver class for single relation resolvers: UserRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Address } from \\"../../../models/Address\\";
import { User } from \\"../../../models/User\\";
import { UserAddressArgs } from \\"./args/UserAddressArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => User)
export class UserRelationsResolver {
  @ResolveField((_type: any) => Address, {
    nullable: true
  })
  async address(@Parent() user: User, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: UserAddressArgs): Promise<Address | null> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'User', '', '');
    return getPrismaFromContext(ctx).user.findUniqueOrThrow({
      where: {
        id: user.id,
      },
    }).address({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'User', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate resolvers classes for prisma models with cyclic relations: Post 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { PostAuthorArgs } from \\"./args/PostAuthorArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => Post)
export class PostRelationsResolver {
  @ResolveField((_type: any) => User, {
    nullable: true,
    description: \\"author field doc\\"
  })
  async author(@Parent() post: Post, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: PostAuthorArgs): Promise<User | null> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'Post', '', '');
    return getPrismaFromContext(ctx).post.findUniqueOrThrow({
      where: {
        uuid: post.uuid,
      },
    }).author({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'Post', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation should properly generate resolvers classes for prisma models with cyclic relations: User 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { UserPostsArgs } from \\"./args/UserPostsArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => User)
export class UserRelationsResolver {
  @ResolveField((_type: any) => [Post], {
    nullable: false
  })
  async posts(@Parent() user: User, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args() args: UserPostsArgs): Promise<Post[]> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'User', '', '');
    return getPrismaFromContext(ctx).user.findUniqueOrThrow({
      where: {
        id: user.id,
      },
    }).posts({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'User', '', '')),
    });
  }
}
"
`;

exports[`relations resolvers generation when \`fullTextSearch\` preview feature is enabled should properly generate args type classes using SearchRelevanceInput: FirstModelSecondModelsFieldArgs 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import * as GraphQLScalars from \\"graphql-scalars\\";
import { SecondModelOrderByWithRelationInput, SecondModelWhereInput, SecondModelWhereUniqueInput } from \\"../../../inputs\\";
import { SecondModelScalarFieldEnum } from \\"../../../../enums/SecondModelScalarFieldEnum\\";

@ArgsType()
export class FirstModelSecondModelsFieldArgs {
  @Field((_type: any) => SecondModelWhereInput, {
    nullable: true
  })
  where?: SecondModelWhereInput | undefined;

  @Field((_type: any) => [SecondModelOrderByWithRelationInput], {
    nullable: true
  })
  orderBy?: SecondModelOrderByWithRelationInput[] | undefined;

  @Field((_type: any) => SecondModelWhereUniqueInput, {
    nullable: true
  })
  cursor?: SecondModelWhereUniqueInput | undefined;

  @Field((_type: any) => Int, {
    nullable: true
  })
  take?: number | undefined;

  @Field((_type: any) => Int, {
    nullable: true
  })
  skip?: number | undefined;

  @Field((_type: any) => [SecondModelScalarFieldEnum], {
    nullable: true
  })
  distinct?: Array<\\"idField\\" | \\"uniqueStringField\\" | \\"floatField\\" | \\"firstModelFieldId\\"> | undefined;
}
"
`;

exports[`relations resolvers generation when emitRedundantTypesInfo is set to true should properly generate type info for @Args decorator: UserRelationsResolver 1`] = `
"import { Args, ArgsType, Context, Field, Float, ID, Info, InputType, Int, Mutation, ObjectType, Parent, Query, ResolveField, Resolver, registerEnumType } from \\"@nestjs/graphql\\";
import type { GraphQLResolveInfo } from \\"graphql\\";
import { Post } from \\"../../../models/Post\\";
import { User } from \\"../../../models/User\\";
import { UserPostsArgs } from \\"./args/UserPostsArgs\\";
import { transformArgsIntoPrismaArgs, transformInfoIntoPrismaArgs, getPrismaFromContext, transformCountFieldIntoSelectRelationsCount, buildPrismaQueryFromArgs, buildPrismaQueryFromArgsWithInclude, InlineLoader } from \\"../../../helpers\\";
import * as DataLoader from \\"dataloader\\";

@Resolver((_of: any) => User)
export class UserRelationsResolver {
  @ResolveField((_type: any) => [Post], {
    nullable: false
  })
  async posts(@Parent() user: User, @Context() ctx: any, @Info() info: GraphQLResolveInfo, @Args((_type: any) => UserPostsArgs) args: UserPostsArgs): Promise<Post[]> {
    const { _count } = transformInfoIntoPrismaArgs(info, 'User', '', '');
    return getPrismaFromContext(ctx).user.findUniqueOrThrow({
      where: {
        id: user.id,
      },
    }).posts({
      ...args,
      ...(_count && transformCountFieldIntoSelectRelationsCount(_count, 'User', '', '')),
    });
  }
}
"
`;
